@@ -84,6 +84,8 @@ Bug fixes:
 - PR#6262: equality of first-class modules take module aliases into account
 - PR#6293: Assert_failure with invalid package type
 - PR#6307: Behavior of 'module type of' w.r.t. module aliases
+- fix -dsource printing of "external _pipe = ..."
+  (Gabriel Scherer)
 
 Features wishes:
 - PR#4243: make the Makefiles parallelizable
